--- a/src/engine/source/server/CMakeLists.txt
+++ b/src/engine/source/server/CMakeLists.txt
@@ -1,5 +1,13 @@
-# Minimum 3.14 required by googletest discover tests
-cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
+#  Copyright (C) 2015-2021, Wazuh Inc.
+#  All rights reserved.
+#
+#  This program is free software; you can redistribute it
+#  and/or modify it under the terms of the GNU General Public
+#  License (version 2) as published by the FSF - Free Software
+#  Foundation.
+
+# Minimum 3.20 required by googletest discover tests
+cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
 
 # Set c++17
 set(CMAKE_CXX_STANDARD 17)
@@ -67,7 +75,7 @@ target_sources(main PRIVATE
     ${ENGINE_SERVER_SOURCE_DIR}/protocolHandler.cpp
     ${ENGINE_SERVER_SOURCE_DIR}/endpoints/baseEndpoint.cpp
     ${ENGINE_SERVER_SOURCE_DIR}/endpoints/tcpEndpoint.cpp
-    ${ENGINE_SERVER_SOURCE_DIR}/endpoints/endpointFactory.cpp
+    ${ENGINE_SERVER_SOURCE_DIR}/endpoints/udpEndpoint.cpp
 )
 
 target_include_directories(main PUBLIC
