--- a/src/engine/test/CMakeLists.txt
+++ b/src/engine/test/CMakeLists.txt
@@ -30,7 +30,7 @@ include(GoogleTest)
 add_subdirectory(${TEST_SOURCE_DIR}/router)
 add_subdirectory(${TEST_SOURCE_DIR}/json)
 add_subdirectory(${TEST_SOURCE_DIR}/builder)
-add_subdirectory(${TEST_SOURCE_DIR}/graph)
+#add_subdirectory(${TEST_SOURCE_DIR}/graph)
 add_subdirectory(${TEST_SOURCE_DIR}/catalog)
 add_subdirectory(${TEST_SOURCE_DIR}/cliParser)
 add_subdirectory(${TEST_SOURCE_DIR}/shared)
