Fixed rxcpp includes and include in cli_parser

--- a/src/engine/source/server/CMakeLists.txt
+++ b/src/engine/source/server/CMakeLists.txt
@@ -53,8 +53,9 @@ CPMAddPackage(
   GITHUB_REPOSITORY ReactiveX/RxCpp
   GIT_TAG v4.1.1
   VERSION 4.1.1
+  OPTIONS
+    "RXCPP_DISABLE_TESTS_AND_EXAMPLES"
 )
-list(APPEND EXTERNAL_DEPS "rxcpp")
 
 # Add this dependencies to parent CMakeLists scope
 set(EXTERNAL_DEPS ${EXTERNAL_DEPS} PARENT_SCOPE)
@@ -74,4 +75,5 @@ target_include_directories(main PUBLIC
     ${ENGINE_SERVER_SOURCE_DIR}
     ${uvw_SOURCE_DIR}/src/
     ${uvw_SOURCE_DIR}/src/uvw/
+    ${RxCpp_SOURCE_DIR}/Rx/v2/src
 )
